@@ -1,7 +1,7 @@
 #
 # Gramps - a GTK+/GNOME based genealogy program
 #
-# Copyright (C) 2000-2005  Donald N. Allingham
+# Copyright (C) 2000-2007  Donald N. Allingham
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -175,7 +175,9 @@ class PageSizeParser(handler.ContentHandler):
 try:
     parser = make_parser()
     parser.setContentHandler(PageSizeParser(paper_sizes))
-    parser.parse(const.papersize)
+    the_file = open(const.papersize)
+    parser.parse(the_file)
+    the_file.close()
     paper_sizes.append(BaseDoc.PaperSize(_("Custom Size"),-1,-1))
 except (IOError,OSError,SAXParseException):
     paper_sizes = [
